# GameA

./: .clangd  .gitignore  CMakeLists.txt  README.md  meGame2.sublime-project
misc/: build.bat  runAPP.bat
shaders/: anim.frag  anim.vert  debug.frag  debug.vert  default.frag  default.vert  framebuffer.frag  framebuffer.vert  grass.frag  light.frag  light.vert  outline.frag  outline.vert  shader.frag  shader.vert  shape.frag  shape.geom  shape.vert  skybox.frag  skybox.vert  stefani.frag  stefani.vert  windows.frag
shaders/post_processing/: bloom.frag  bloom.vert  blur.frag  screen_space.frag
shaders/shadow/: anim_shadow_map_depth.vert  debug_shadow_map_quad_depth.frag  shadow_map_depth.vert  shape.frag  shape.vert
shaders/water/: water.frag  water.vert
shadow/: 3.1.3.shadow_mapping.vs  3.1.3.shadow_mapping_depth.vs  shadow_mapping.cpp
src/: animation.cpp  animation.h  basic_shapes.cpp  basic_shapes.h  camera.cpp  camera.h  game.cpp  game.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  physics.cpp  physics.h  platform.h  render_group.cpp  render_group.h  shader.h
